2009-09-09  Ivan N. Zlatev  <contact@i-nz.net>

	* Add .txt extension to the text files

2008-09-03  Ivan N. Zlatev  <contact@i-nz.net>

	* generate-mono-design.py: Update to reflect anonsvn viewvc update, 
	which broke the downloading process.
	* Mono.Design/Makefile: force-invoke generate-md rule else make doesn't.
	I have no idea why.

2008-09-03  Ivan N. Zlatev  <contact@i-nz.net>

	* CodeProvider.cs: Fix CreateUniqueMethodName.

2008-09-03  Ivan N. Zlatev  <contact@i-nz.net>

	* CodeProvider.cs: Fix one more NRE in GetCompatibleMethods.

2008-09-03  Ivan N. Zlatev  <contact@i-nz.net>

	* CodeProvider.cs: Don't assume that all definitions will be method 
	definitions in the .Designer file. Fixes a NRE.

2008-09-02  Ivan N. Zlatev  <contact@i-nz.net>

	* deps/Mono.Design/patches/DesignerHost-designer-type-replacement.patch, 
	  deps/Mono.Design/patches/DesignerSerializationManager-serializer-type-replacement.patch:
	  Fix the hunk headers, so that the patches actually apply.
	* deps/Mono.Design/generate-mono-design.py: Report patching errors.
	[Fixes bug #418197]

2008-09-01  Ivan N. Zlatev  <contact@i-nz.net>

	* deps/Mono.Design/patches/DesignerHost-designer-type-replacement.patch, 
	  deps/Mono.Design/patches/DesignerSerializationManager-serializer-type-replacement.patch:
	Do not mix MSNET and Mono.Design designer/serializer types.

2008-08-19  Ivan N. Zlatev  <contact@i-nz.net>

	* Make the file path textbox readonly in the New File dialog.
	[Fixes bug #417617]

2008-07-28  Ivan N. Zlatev  <contact@i-nz.net>

	* Misc fixes and improvements. 

2008-07-27  Ivan N. Zlatev  <contact@i-nz.net>

	* Add a mono-design-update build target to the Makefile to allow 
	an user to regenerate Mono.Design with upstream System.Design.

2008-07-27  Ivan N. Zlatev  <contact@i-nz.net>

	* Remove a leftover CWL. 

2008-07-27  Ivan N. Zlatev  <contact@i-nz.net>

	* Fix the creation of new files.

2008-07-24  Ivan N. Zlatev  <contact@i-nz.net>
